<resources>
    <string name="app_name">游西邮</string>
    <string name="account">学号</string>
    <string name="password">密码</string>
    <string name="verification">验证码</string>
    <string name="login">登录</string>
    <string name="about_login">关于登录</string>
    <string name="course">课表</string>
    <string name="score">成绩</string>
    <string name="plan">课程</string>
    <string name="me">我</string>
    <string name="credit">学分</string>
    <string name="period">周学时</string>
    <string name="check">考核方式</string>
    <string name="category">课程性质</string>
    <string name="code">课程代码</string>
    <string name="week">起始结束周</string>
    <string name="news">查看公告</string>
    <string name="indirection">登录说明</string>
    <string name="question">问题反馈</string>
    <string name="about">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="news_title">教务处公告</string>
    <string name="next">下一个</string>
    <string name="confirm">确定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
