<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/list_item_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="81dp">

        <LinearLayout
            android:id="@+id/name_necessity_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorWordBlue"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorWordBlue"
                android:textSize="16sp"
                android:singleLine="true"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/necessity_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="3dp"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/credit_period_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/credit_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="3dp"
                android:text="@string/credit"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/credit_content_tv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/period_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/period"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/period_content_tv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/check_category_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/check_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="2dp"
                android:text="@string/check"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/check_content_tv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/category"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/category_content_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_week_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/code_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="2dp"
                android:text="@string/code"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/code_content_tv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/week_tv"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/week"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/week_content_tv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>