<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    tools:context="myapp.lenovo.httpclient.fragment.MeFragment">

    <LinearLayout
        android:id="@+id/info_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@color/colorTopicBlue">

        <ImageView
            android:id="@+id/sculpture_iv"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/name_account_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/major_class_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/major_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/class_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/news_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/news_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/news"/>

        <TextView
            android:id="@+id/news_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:text="@string/news"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/indirection_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/indirection_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/indirection"/>

            <TextView
                android:id="@+id/indirection_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/indirection"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/line3_tv"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackgroundGray"/>

        <LinearLayout
            android:id="@+id/question_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/question_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/question"/>

            <TextView
                android:id="@+id/question_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/question"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/about_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/about"/>

        <TextView
            android:id="@+id/about_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:text="@string/about"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/logout_iv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/logout"/>

        <TextView
            android:id="@+id/logout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:text="@string/logout"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>
